v1/tests/elab/errors/name/unbound_name.snapshot
exit status: 1

stdout = """
def error: #error = #error;
types of expressions:
span   | source                                   | type
-------|------------------------------------------|-----------------------------
12..13 | b                                        | #error
metavars:
?0 = #error
"""

stderr = """
error: unbound name `b`
  ┌─ tests/elab/errors/name/unbound_name.pion:1:13
  │
1 │ def error = b;
  │             ^

aborting due to 1 previous error
"""
